[tool.poetry]
name = "iui_backend"
version = "0.1.0"
description = ""
authors = [
    "iui-Group B"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flask = "^3.0.0"
markupsafe = "^2.1.3"
openai = "^1.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
